--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,18 @@
   border-radius: 32px;
 }
 
+.button:hover {
+  background-color: #081789;
+}
+
 .campo {
   width: 100%;
   height: 24px;
   border: none;
   border-bottom: 1px solid #000000;
   font-family: "Poppins", sans-serif;
+}
+
+.mudardepag {
+  color: #FBBC05;
 }
